dotCMS/core#16246 Fix nav icon alignment

--- a/src/app/view/components/dot-navigation/components/dot-nav-item/dot-nav-item.component.scss
+++ b/src/app/view/components/dot-navigation/components/dot-nav-item/dot-nav-item.component.scss
@@ -38,10 +38,12 @@ dot-sub-nav {
         position: relative;
         transition: background-color $basic-speed ease $basic-speed;
         width: $navigation-width;
+        justify-content: space-between;
 
         &-label {
             margin-left: $basic-padding * 2;
             word-break: break-word;
+            flex: 1
         }
     }
 
